--- a/jaxrs-doclet/pom.xml
+++ b/jaxrs-doclet/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>jaxrs-doclet-parent</artifactId>
         <groupId>com.hypnoticocelot</groupId>
-        <version>0.0.2</version>
+        <version>0.0.2-EK3-1-SNAPSHOT</version>
     </parent>
 
     <artifactId>jaxrs-doclet</artifactId>
@@ -31,6 +31,12 @@
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-core</artifactId>
             <version>1.17.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.wordnik</groupId>
+            <artifactId>swagger-annotations</artifactId>
+            <version>1.3.4</version>
             <scope>test</scope>
         </dependency>
         <dependency>
