--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>com.hypnoticocelot</groupId>
     <artifactId>jaxrs-doclet-parent</artifactId>
     <packaging>pom</packaging>
-    <version>0.0.2</version>
+    <version>0.0.2-EK3-1-SNAPSHOT</version>
     <name>JAX-RS Doclet</name>
     <url>https://github.com/ryankennedy/swagger-jaxrs-doclet</url>
     <description>
